fixed layout margins not matching on mobile devices

--- a/src/App.css
+++ b/src/App.css
@@ -13,9 +13,7 @@
   --third-col: #88DDA0;
 }
 
-#root {
-  height: 100vh;
-}
+#root {}
 
 html,
 body {
