--- a/src/components/Login.css
+++ b/src/components/Login.css
@@ -1,9 +1,10 @@
 #main {
   color: black;
-  height: 100%;
   background: #D9D9D9;
   display: flex;
   flex-direction: column;
+  position: fixed;
+  width: 100%;
 }
 
 #content {
@@ -20,7 +21,6 @@
   height: auto;
   display: flex;
   flex-direction: column;
-  padding: 40px;
   max-width: 450px;
   text-align: center;
   margin-top: 50px;
@@ -153,7 +153,8 @@
 
   .sign-in {
     width: 100%;
-    margin-top: 30px;
+    margin-top: 50px;
+    padding: 0px;
   }
 
   .sign-in--btn>p {
